issue-216 flag problem as error when adding individually. (#217)
Co-authored-by: Kane Bryant <Kane.Bryant@sa.gov.au>